homepage added slide and fixed z-index

--- a/Groupwork/main.css
+++ b/Groupwork/main.css
@@ -54,15 +54,16 @@ div #banner{
   width: 100%;
 }
 .sticky + .content {
-  padding-top: 60px;
+  padding-top: 2%;
 }
 .navbar{
-   position: sticky;
+  position: sticky;
   display: flex;
   justify-content: space-between;
   margin: 0% 25%; 
 }
 #navbar{
+  z-index: 10;
   background: rgba(193,67,71,1);  
   margin: 0% 0%;
 }
@@ -72,7 +73,7 @@ div #banner{
 .dropbtn {
   background-color: rgb(193,67,71);
   padding: 0px;
-  font-size: 20px;
+  font-size: 1.1em;
   border: none;
 }
 
@@ -114,4 +115,110 @@ div #banner{
 .dropdown:hover .dropbtn {
   background-color: red;
   text-decoration: underline;
+}
+
+.slideshow{
+  left: 0px;
+  padding-top: 20px;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 400px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+.mySlides img{
+  height: 400px;
+  width: 400px;
+  object-fit: contain;
+}
+/* Next & previous buttons */
+.prev, .next {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: rgba(82, 77, 97,1);
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.prev{
+  left: 0;
+}
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  display: flex;
+  background-color: rgba(193,67,71,0);
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot { 
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 0.25%;
+  background-color:rgba(193,67,71,0.2);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: rgba(193,67,71,1);
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
